--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
@@ -41,7 +42,7 @@
             android:paddingLeft="@dimen/padding_15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/cv">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -90,7 +91,7 @@
                     android:layout_height="3dp"
                     android:background="@color/colorYellow"
                     android:visibility="@{regViewModel.clickedCount == 2 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintLeft_toLeftOf="@+id/emergency_info"
+                    app:layout_constraintLeft_toLeftOf="@+id/basic_info"
                     app:layout_constraintRight_toRightOf="@+id/emergency_info"
                     app:layout_constraintTop_toBottomOf="@+id/emergency_info" />
 
@@ -114,7 +115,7 @@
                     android:layout_height="3dp"
                     android:background="@color/colorYellow"
                     android:visibility="@{regViewModel.clickedCount == 3 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintLeft_toLeftOf="@+id/id_proof"
+                    app:layout_constraintLeft_toLeftOf="@+id/basic_info"
                     app:layout_constraintRight_toRightOf="@+id/id_proof"
                     app:layout_constraintTop_toBottomOf="@+id/id_proof" />
 
@@ -138,7 +139,7 @@
                     android:layout_height="3dp"
                     android:background="@color/colorYellow"
                     android:visibility="@{regViewModel.clickedCount == 4 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintLeft_toLeftOf="@+id/finger_print"
+                    app:layout_constraintLeft_toLeftOf="@+id/basic_info"
                     app:layout_constraintRight_toRightOf="@+id/finger_print"
                     app:layout_constraintTop_toBottomOf="@+id/finger_print" />
 
